--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                         <li>
                             <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="nav__link">
                                 Pages
-                                <svg class="w-5 h-5 inline-block" aria-hidden="true" fill="currentColor"
-                                    viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd"
-                                        d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                                        clip-rule="evenodd"></path>
-                                </svg>
                             </button>
+                            <svg class="w-5 h-5 inline-block" aria-hidden="true" fill="currentColor"
+                                viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
                             <!-- Dropdown menu -->
                             <div id="dropdownNavbar" class="z-10 hidden w-full lg:w-auto px-11">
                                 <ul class="text-center lg:text-left lg:w-44 shadow-xl" aria-labelledby="dropdownLargeButton">
@@ -114,9 +114,10 @@
                     <button class="search__btn rounded-full flex items-center justify-center">
                         <i class="fa-solid fa-magnifying-glass text-sm transition"></i>
                     </button>
+                    
 
                     <!-- Button  -->
-                    <button class="btn mt-2.5">SCHEDULE A DEMO</button>
+                    <button class="btn mt-2.5 lg:mt-0">SCHEDULE A DEMO</button>
                 </div>
             </div>
         </nav>
