--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <!-- Search modal -->
                     <div id="searchModal" tabindex="-1" aria-hidden="true"
                         class="fixed top-0 left-0 right-0 bottom-0 z-50 hidden md:inset-0">
-                        <div class="relative w-full max-w-xl max-h-full">
+                        <div class="relative w-full max-w-xl max-h-full px-4">
                             <!-- Modal content -->
                             <div class="relative">
                                 <!-- Modal header -->
