--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MasterWork</title>
+    <title>Masterwork</title>
 
     <!-- Google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -48,7 +48,7 @@
                 </a>
 
                 <!-- Theme mode  -->
-                <div class="ml-auto lg:ml-4 lg:order-last">
+                <div class="lg:ml-4 ml-auto lg:order-last">
                     <button class="theme-btn light text-xl lg:text-2xl -rotate-12 text-2xl">
                         <i class="light fa-regular fa-moon relative top-1"></i>
                         <i class="dark fa-regular fa-sun relative top-1"></i>
@@ -126,7 +126,8 @@
                                 <!-- Modal body -->
                                 <div class="search__dropdown">
                                     <form>
-                                        <div class="flex items-center w-full bg-white rounded-md overflow-hidden">
+                                        <div
+                                            class="search__content flex items-center w-full rounded-md overflow-hidden">
                                             <input type="search" class="bg-transparent border-0 grow px-5"
                                                 placeholder="Enter Keyword" required />
                                             <button type="submit" class="py-4 px-6 text-white">
