--- a/index.html
+++ b/index.html
@@ -263,8 +263,90 @@
     </section>
 
     <!-- FAQ  -->
-    <section class="faq">
+    <section class="faq py-12">
+        <div class="max-w-screen-xl mx-auto py-12 px-4">
+            <div class="section-heading">
+                <h6>QUESTIONS AND ANSWERS</h6>
+                <h3>General FAQs</h3>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis
+                    dapibus nunc, ut
+                    rhoncus turpis sodales quis. Integer sit amet mattis quam.</p>
+            </div>
 
+            <div class="section-body flex">
+                <div class="w-2/5 mt-12 pr-4">
+                    <img src="./assets/img/faq.jpg" class="shadow-lg rounded-md" alt="">
+                </div>
+                <div class="w-3/5 mt-12 pl-12">
+                    <div id="passage-1" class="accordion__content rounded-md">
+                        <button data-id="passage-1" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            There are many passages but the majority?
+                            <i></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                    <div id="passage-2" class="accordion__content rounded-md">
+                        <button data-id="passage-2" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            Sed ut perspiciatis unde omnis?
+                            <i data-id="passage-2" class="fa-solid fa-angle-down"></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                    <div id="passage-3" class="accordion__content rounded-md">
+                        <button data-id="passage-3" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            At vero eos iusto odio ducimus qui?
+                            <i data-id="passage-3" class="fa-solid fa-angle-down"></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                    <div id="passage-4" class="accordion__content rounded-md">
+                        <button data-id="passage-4" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            We denounce with righteous?
+                            <i data-id="passage-4" class="fa-solid fa-angle-down"></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                    <div id="passage-5" class="accordion__content rounded-md">
+                        <button data-id="passage-5" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            perspiciatis unde omnis?
+                            <i data-id="passage-5" class="fa-solid fa-angle-down"></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                    <div id="passage-6" class="accordion__content rounded-md">
+                        <button data-id="passage-6" class="block pl-5 py-6 faq__button flex justify-between w-full">
+                            At vero eos iusto odio ducimus qui?
+                            <i data-id="passage-6" class="fa-solid fa-angle-down"></i>
+                        </button>
+                        <p class="pl-5 pb-6">Voluptates amet earum velit nobis aliquam
+                            laboriosam
+                            nihil debitis facere
+                            voluptatibus consectetur quae quasi fuga, ad
+                            corrupti libero omnis sapiente non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- INMPORT -->
